--- a/roles/hypervisor_setup/tasks/main.yml
+++ b/roles/hypervisor_setup/tasks/main.yml
@@ -96,10 +96,23 @@
     dest: "{{ share_directory }}/ansible"
     extra_opts: "--strip-components=1"
 
+- name: Copy Ansible Tower Bundle to directory
+  copy:
+    src: "{{ share_directory }}/{{ ansible_tower_bundle_file }}"
+    dest: "{{ share_directory }}/ansible"
+    owner: apache
+    group: apache
+    mode: 0644
+
 #####
 # RHEL
 
 - include: rhel.yml
+
+#####
+# Tower
+
+- include: tower.yml
 
 #####
 # Workshop Files
