Added firewall rule for section two content. Pulled license from different location.

--- a/roles/hypervisor_setup/tasks/workshop-files.yml
+++ b/roles/hypervisor_setup/tasks/workshop-files.yml
@@ -68,7 +68,7 @@
 
 - name: Stage workshop-files - license
   get_url:
-    url: https://raw.githubusercontent.com/RedHatGov/redhatgov.workshops/master/ansible_tower/roles/ansible.tower/files/license
+    url: https://s3.amazonaws.com/ansible-tower-workshop-license/license
     dest: "{{ share_directory }}/workshop-files/license"
     mode: 0644
     owner: apache
