Added the 'createrepo' package. Allowed all RPM repo maintenance commands to run when offline, except for 'reposync'

--- a/roles/hypervisor_setup/tasks/kvm.yml
+++ b/roles/hypervisor_setup/tasks/kvm.yml
@@ -23,6 +23,7 @@
 
 - name: Reload dnsmasq if it is already running
   shell: /usr/bin/pkill -HUP dnsmasq
+  ignore_errors: True
   tags:
     - hypervisor_setup
 
