Add table to outline internal VM layout to workshop docs Add tag to skip reposync and createrepo

--- a/roles/hypervisor_setup/tasks/rhel.yml
+++ b/roles/hypervisor_setup/tasks/rhel.yml
@@ -126,6 +126,7 @@
   when: connectivity|succeeded
   tags:
     - hypervisor_setup
+    - sync_channels
 
 - name: Set file permissions
   file:
@@ -153,6 +154,7 @@
   shell: createrepo --database {{ share_directory }}/RPMs
   tags:
     - hypervisor_setup
+    - sync_channels
 
 - name: Set file permissions on directories shared RPMS
   command: find "{{ share_directory }}/RPMs/" -type d -exec chmod -c 0755 {} \;
