--- a/roles/hypervisor_setup/tasks/kvm.yml
+++ b/roles/hypervisor_setup/tasks/kvm.yml
@@ -110,6 +110,7 @@
          --disk path="{{ item.url }}",device=cdrom
          --extra-args="ks=http://{{ kvm_private_network_ip }}:{{ www_port_ks }}/ks.cfg-{{ item.ks }} ip=dhcp"
          --check path_in_use=off
+         --channel unix,mode=bind,path=/var/lib/libvirt/qemu/{{ item.name }}.agent,target_type=virtio,name=org.qemu.guest_agent.0
   when: item.name not in vms.list_vms
   with_items:
     - "{{ guests }}"
@@ -535,15 +536,22 @@
     - hypervisor_setup
 
 - name: Resolve Guest IP addresses
-  shell: "dig @{{ kvm_private_network_ip }} +short {{ item.name }}.default | grep -v -e '^$' || exit 1"
+  shell: "virsh domifaddr {{ item.name }} | tail -2 | head -1 | sed 's/.*ipv4 *//' | cut -d'/' -f1"
   register: resolved_IPs
-  ignore_errors: yes
-  retries: 10
-  delay: 60
   with_items:
     - "{{ guests }}"
   tags:
     - hypervisor_setup
+    - resolveIP
+
+- name: Display Guest IP addresses
+  debug:
+    msg: "{{ resolved_IPs }}"
+  with_items:
+    - "{{ guests }}"
+  tags:
+    - hypervisor_setup
+    - resolveIP
 
 - name: Setup forwards to internal guests via socat
   copy:
