Updated dependencies to ensure sed is installed

--- a/roles/hypervisor_setup/tasks/main.yml
+++ b/roles/hypervisor_setup/tasks/main.yml
@@ -14,6 +14,7 @@
     - cockpit-shell
     - cockpit-system
     - cockpit-ws
+    - coreutils
     - createrepo
     - git
     - gitweb
@@ -36,6 +37,7 @@
     - qemu-kvm-tools
     - rpcbind
     - samba
+    - sed
     - socat
     - virt-install
     - virt-manager
