Update workshop-docs include to copy new graphic

--- a/roles/hypervisor_setup/tasks/workshop-docs.yml
+++ b/roles/hypervisor_setup/tasks/workshop-docs.yml
@@ -107,6 +107,7 @@
     - "newrole.png"
     - "newwebsite.png"
     - "results.png"
+    - "spscm.png"
     - "std.png"
     - "tower-login.png"
   tags:
