--- a/roles/hypervisor_setup/tasks/main.yml
+++ b/roles/hypervisor_setup/tasks/main.yml
@@ -68,6 +68,7 @@
     mode: 0775
   tags:
     - hypervisor_setup
+    - download
 
 #####
 # Ansible Tower
@@ -81,17 +82,22 @@
     mode: 0775
   tags:
     - hypervisor_setup
+    - download
 
 - name: Ensure Ansible Tower is staged
   stat:
     path: "{{ share_directory }}/{{ ansible_tower_bundle_file }}"
   register: ansible_tower_download
+  tags:
+    - download
 
 - name: Download Ansible Tower Bundle
   get_url:
     url: "{{ ansible_tower_bundle_base_url }}/{{ ansible_tower_bundle_file }}"
     dest: "{{ share_directory }}/{{ ansible_tower_bundle_file }}"
   when: ansible_tower_download.stat.exists == False
+  tags:
+    - download
 
 - name: UnTar Ansible Tower Bundle
   unarchive:
@@ -99,6 +105,8 @@
     src: "{{ share_directory }}/{{ ansible_tower_bundle_file }}"
     dest: "{{ share_directory }}/ansible"
     extra_opts: "--strip-components=1"
+  tags:
+    - download
 
 - name: Copy Ansible Tower Bundle to directory
   copy:
