--- a/roles/hypervisor_setup/tasks/rhel.yml
+++ b/roles/hypervisor_setup/tasks/rhel.yml
@@ -35,6 +35,7 @@
   register: repo_RPMs
   tags:
     - hypervisor_setup
+    - download
 
 - name: Update yum.conf to allow for unlimited retries
   lineinfile:
@@ -55,11 +56,10 @@
     path: "{{ share_directory }}/RPMs"
     state: directory
     mode: 0755
-    owner: apache
-    group: apache
     setype: public_content_rw_t
   tags:
     - hypervisor_setup
+    - download
 
 - name: Set permissions on RPMs directory
   file:
@@ -72,6 +72,20 @@
     - hypervisor_setup
 
 - name: Create Channel directory(s)
+  file:
+    path: "{{ share_directory }}/RPMs/{{ item }}"
+    state: directory
+    mode: 0755
+    setype: public_content_rw_t
+  with_items:
+    - rhel-7-server-rpms
+    - rhel-7-server-extras-rpms
+    - rhel-7-server-optional-rpms
+  tags:
+    - hypervisor_setup
+    - download
+
+- name: Set permissions on Channel directory(s)
   file:
     path: "{{ share_directory }}/RPMs/{{ item }}"
     state: directory
@@ -95,6 +109,7 @@
   ignore_errors: yes
   tags:
     - hypervisor_setup
+    - download
 
 - name: Set ownerships and permissions on Channel directory(s)
   file:
@@ -116,6 +131,7 @@
   ignore_errors: True
   tags:
     - hypervisor_setup
+    - download
 
 - name: Download Channel
   shell: reposync --gpgcheck -l --repoid={{ item }} --norepopath --download_path={{ share_directory }}/RPMs/{{ item }} >> /var/log/reposync.log
@@ -127,6 +143,7 @@
   tags:
     - hypervisor_setup
     - sync_channels
+    - download
 
 - name: Set file permissions
   file:
@@ -142,6 +159,7 @@
    - rhel-7-server-optional-rpms
   tags:
     - hypervisor_setup
+    - download
 
 - name: Ensure that RPMs repos exist
   stat:
@@ -149,22 +167,26 @@
   register: repodata_RPMs
   tags:
     - hypervisor_setup
+    - download
 
 - name: Run createrepo against downloaded Channel(s)
   shell: createrepo --database {{ share_directory }}/RPMs
   tags:
     - hypervisor_setup
     - sync_channels
+    - download
 
 - name: Set file permissions on directories shared RPMS
   command: find "{{ share_directory }}/RPMs/" -type d -exec chmod -c 0755 {} \;
   tags:
     - hypervisor_setup
+    - download
 
 - name: Set file permissions on files shared RPMS
   command: find "{{ share_directory }}/RPMs/" -type f -exec chmod -c 0644 {} \;
   tags:
     - hypervisor_setup
+    - download
 
 - name: Set file permissions on directories shared RPMS
   command: chown -R apache:apache "{{ share_directory }}/RPMs/"
@@ -173,3 +195,5 @@
 
 - name: Run restore context to reload SELinux
   shell: "restorecon -Rv {{ share_directory }}/RPMs"
+  tags:
+    - download
