--- a/roles/hypervisor_setup/tasks/kvm.yml
+++ b/roles/hypervisor_setup/tasks/kvm.yml
@@ -87,13 +87,13 @@
   tags:
     - hypervisor_setup
 
-- name: Start private network
-  virt_net:
-    command: start
-    name: private
-  when: kvm_private_network_name not in kvm_networks.list_nets
-  tags:
-    - hypervisor_setup
+#- name: Start private network
+#  virt_net:
+#    command: start
+#    name: private
+#  when: kvm_private_network_name not in kvm_networks.list_nets
+#  tags:
+#    - hypervisor_setup
 
 - name: Get list of Virtual Machines available on the host
   virt:
